--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-[Mm]igrations/
+/AudioPlayerWebAPI/[Mm]igrations/
 
 # User-specific files
 *.rsuser
